--- a/Obsidian.css
+++ b/Obsidian.css
@@ -27,9 +27,9 @@
     --button-disabled-background-color: transparent;
     --button-disabled-text-color: #999;
 
-    --primary-button-background-color: #888;
+    --primary-button-background-color: #6F31BC;
     --primary-button-text-color: #ccc;
-    --primary-button-border-color: #999;
+    --primary-button-border-color: #6c6c6c;
 
     --muted-text-color: #bbb;
 
@@ -162,3 +162,6 @@ span.fancytree-node:hover {
     background-color: #333333 !important;
 }
 
+.btn-primary.focus, .btn-primary:focus {
+    box-shadow: none !important;
+}
