--- a/Obsidian.css
+++ b/Obsidian.css
@@ -41,7 +41,7 @@
     --hover-item-border-color: #333;
 
     --active-item-text-color: #ccc;
-    --active-item-background-color: transparent;
+    --active-item-background-color: #6B54B7;
     --active-item-border-color: transparent;
 
     --menu-text-color: #ccc;
@@ -213,5 +213,5 @@ span.fancytree-node:hover {
 }
 
 .ck.ck-list__item .ck-button:hover:not(.ck-disabled) {
-    background: #8b6cef;
+    background: #6B54B7;
 }
